--- a/comingsoon.html
+++ b/comingsoon.html
@@ -7,23 +7,15 @@
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
         <link rel="stylesheet" type="text/css" href="css/styles.css"/>
         <link rel="icon" href="img/favicon.png"/>
-        <title>Healthy salads | Error</title>
+        <title>Healthy salads | Comingsoon</title>
     </header>
     <body class="bg-secondary">
-        <section class="error-s1 container-fluid min-vh-100 d-flex align-items-center py-5">
+        <section class="comingsoon-s1 container-fluid min-vh-100 d-flex align-items-center py-5">
             <div class="row w-100 mx-0">
-                <div class="col-10 col-sm-8 col-md-6 text-end ms-auto pe-5">
-                    <h1 class="display-3 text-yellow text-shadow fw-bold">
-                        Error 404
+                <div class="col-10 col-sm-8 col-md-6 text-start text-shadow">
+                    <h1 class="display-1 text-yellow">
+                        Coming soon
                     </h1>
-                    <h2 class="display-6 text-yellow text-shadow fw-bold">
-                        Page not found
-                    </h2>
-                    <div class="w-100 py-3">
-                        <a href="index.html" class="btn btn-outline-warning rounded-pill">
-                            Back to <span class="fw-bold">Home</span>
-                        </a>
-                    </div>
                 </div>
             </div>
         </section>
