--- a/privacy.html
+++ b/privacy.html
@@ -19,21 +19,21 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="main-nav">
-                    <ul class="navbar-nav ms-auto text-end text-uppercase">
+                    <ul class="navbar-nav ms-auto text-end text-uppercase fw-bold text-shadow">
                         <li class="nav-item">
-                            <a href="index.html" class="nav-link">Home</a>
+                            <a href="index.html" class="nav-link text-warning">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="about.html" class="nav-link">About</a>
+                            <a href="about.html" class="nav-link text-warning">About</a>
                         </li>
                         <li class="nav-item">
-                            <a href="menu.html" class="nav-link">Menu</a>
+                            <a href="menu.html" class="nav-link text-warning">Menu</a>
                         </li>
                         <li class="nav-item">
-                            <a href="contact.html" class="nav-link">Contact</a>
+                            <a href="contact.html" class="nav-link text-warning">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a href="basket.html" class="nav-link">
+                            <a href="basket.html" class="nav-link text-warning">
                                 <span class="fa fa-shopping-cart"></span>
                             </a>
                         </li>
@@ -86,8 +86,8 @@
                     </div>
                 </div>
             </div>
-        </section>
-        <footer class="container-fluid py-1 border-top border-dark bg-yellow">
+        </section> 
+        <footer class="container-fluid d-flex align-items-center py-2 bg-warning border-top border-dark">
             <div class="row w-100 mx-0 text-center">
                 <div class="col-12 small">
                     <p class="small text-dark mb-0">
