--- a/about.html
+++ b/about.html
@@ -20,21 +20,21 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="main-nav">
-                    <ul class="navbar-nav ms-auto text-end text-uppercase">
+                    <ul class="navbar-nav ms-auto text-end text-uppercase fw-bold text-shadow">
                         <li class="nav-item">
-                            <a href="index.html" class="nav-link">Home</a>
+                            <a href="index.html" class="nav-link text-warning">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="about.html" class="nav-link">About</a>
+                            <a href="about.html" class="nav-link text-warning">About</a>
                         </li>
                         <li class="nav-item">
-                            <a href="menu.html" class="nav-link">Menu</a>
+                            <a href="menu.html" class="nav-link text-warning">Menu</a>
                         </li>
                         <li class="nav-item">
-                            <a href="contact.html" class="nav-link">Contact</a>
+                            <a href="contact.html" class="nav-link text-warning">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a href="basket.html" class="nav-link">
+                            <a href="basket.html" class="nav-link text-warning">
                                 <span class="fa fa-shopping-cart"></span>
                             </a>
                         </li>
@@ -42,15 +42,15 @@
                 </div>
             </nav>
         </header>
-        <section class="about-s1 minh-50vh container-fluid d-flex align-items-center pt-5">
+        <section class="about-s1 minh-50vh container-fluid d-flex align-items-center py-5">
             <div class="row w-100 mx-0 mt-5 pt-5">
-                <div class="col-12 col-md-6 col-lg-7 minh-25vh"></div>
-                <div class="col-12 col-md-6 col-lg-5 d-flex align-items-center">
-                    <div class="text-center text-md-start">
-                        <h2 class="display-6">
+                <div class="col-12 col-lg-7 minh-25vh"></div>
+                <div class="col-12 col-lg-5 d-flex align-items-center">
+                    <div class="text-center text-lg-start pt-5">
+                        <h2 class="display-6 text-warning text-shadow">
                             Phasellus a lacus
                         </h2>
-                        <p class="text-secondary">
+                        <p class="text-dark">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce suscipit, 
                             neque vel tincidunt sollicitudin, libero magna laoreet massa, eu pretium 
                             leo eros at mauris. Phasellus a lacus ipsum. Maecenas dapibus nisi ac 
@@ -64,14 +64,14 @@
                 </div>
             </div>
         </section>
-        <section class="about-s2 minh-50vh container-fluid d-flex align-items-center py-5">
+        <section class="about-s2 minh-50vh container-fluid d-flex align-items-center py-5 border-top border-warning">
             <div class="row w-100 mx-0">
-                <div class="col-12 col-md-6 col-lg-5 order-2 order-md-1 d-flex align-items-center">
-                    <div class="text-center text-md-start">
-                        <h2 class="display-6">
+                <div class="col-12 col-lg-5 order-2 order-lg-1 d-flex align-items-center">
+                    <div class="text-center text-lg-start pt-5">
+                        <h2 class="display-6 text-warning text-shadow">
                             Phasellus a lacus
                         </h2>
-                        <p class="text-secondary">
+                        <p class="text-dark">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce suscipit, 
                             neque vel tincidunt sollicitudin, libero magna laoreet massa, eu pretium 
                             leo eros at mauris. Phasellus a lacus ipsum. Maecenas dapibus nisi ac 
@@ -83,13 +83,13 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-7 minh-25vh order-1 order-md-2"></div>
+                <div class="col-12 col-lg-7 minh-25vh order-1 order-lg-2"></div>
             </div>
-        </section>
-        <footer class="container-fluid">
+        </section> 
+        <footer class="container-fluid d-flex align-items-center py-2 bg-warning border-top border-dark">
             <div class="row w-100 mx-0 text-center">
                 <div class="col-12 small">
-                    <p class="small text-dark">
+                    <p class="small text-dark mb-0">
                         Copyright &copy; 2022. All rights reserved. 
                         <a href="privacy.html" class="text-decoration-none text-dark">
                             Privacy policy
