--- a/basket.html
+++ b/basket.html
@@ -20,21 +20,21 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="main-nav">
-                    <ul class="navbar-nav ms-auto text-end text-uppercase">
+                    <ul class="navbar-nav ms-auto text-end text-uppercase fw-bold text-shadow">
                         <li class="nav-item">
-                            <a href="index.html" class="nav-link">Home</a>
+                            <a href="index.html" class="nav-link text-warning">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="about.html" class="nav-link">About</a>
+                            <a href="about.html" class="nav-link text-warning">About</a>
                         </li>
                         <li class="nav-item">
-                            <a href="menu.html" class="nav-link">Menu</a>
+                            <a href="menu.html" class="nav-link text-warning">Menu</a>
                         </li>
                         <li class="nav-item">
-                            <a href="contact.html" class="nav-link">Contact</a>
+                            <a href="contact.html" class="nav-link text-warning">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a href="basket.html" class="nav-link">
+                            <a href="basket.html" class="nav-link text-warning">
                                 <span class="fa fa-shopping-cart"></span>
                             </a>
                         </li>
@@ -42,34 +42,32 @@
                 </div>
             </nav>
         </header>
-        <section class="basket-s1 minh-25vh d-none d-md-block">
-        </section>
-        <section class="basket-s2 minh-75vh container-fluid d-flex align-items-start py-5">
-            <div class="row w-100 mx-0 mt-5">
+        <section class="basket-s1 minh-100vh container-fluid d-flex align-items-start py-5">
+            <div class="row w-100 mx-0 mt-5 pt-5">
                 <div class="col-12 col-md-6">
                     <div class="card shadow mb-3 bg-white" id="order-details">
-                        <div class="card-header">
-                            <h6 class="text-secondary mb-0 d-inline-block">
+                        <div class="card-header bg-warning">
+                            <h6 class="text-dark mb-0 d-inline-block">
                                 Order details
                             </h6>
                         </div>
                         <div class="card-body collapse show"> 
-                            <h6 class="mt-3 text-secondary border-bottom pb-2">
+                            <h6 class="mt-3 text-dark border-bottom border-warning pb-2">
                                 Product list:
                             </h6> 
                             <div class="product-list">
 
                             </div>
                             <div class="mx-2 text-end border-top pt-3 d-block d-md-none">
-                                <a href="#personal-data" class="btn btn-sm btn-secondary rounded-pill">Next</a>
+                                <a href="#personal-data" class="btn btn-sm btn-warning rounded-pill">Next</a>
                             </div>                               
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6">                    
                     <div class="card shadow mb-3 bg-white" id="personal-data">
-                        <div class="card-header">
-                            <h6 class="text-secondary mb-0 d-inline-block">
+                        <div class="card-header bg-warning">
+                            <h6 class="text-dark pt-1 mb-0 d-inline-block">
                                 Personal data
                             </h6>
                         </div>
@@ -94,7 +92,7 @@
                                 <label class="input-group-text bg-white text-secondary">Address:</label>
                                 <input type="text" class="form-control border-start-0 text-end bg-white"/>
                             </div> 
-                            <h6 class="mt-3 mb-2 text-secondary border-top pt-2">
+                            <h6 class="mt-3 mb-2 text-dark border-top border-warning pt-2">
                                 Account data:
                             </h6> 
                             <div class="input-group input-group-sm mb-2">
@@ -110,22 +108,22 @@
                                 <input type="email" class="form-control border-start-0 text-end bg-white"/>
                             </div>   
                             <div class="mx-2 text-end border-top pt-3 d-block d-md-none">
-                                <a href="#order-details" class="btn btn-sm btn-outline-secondary rounded-pill">Previous</a>
-                                <a href="#payment-data" class="btn btn-sm btn-secondary rounded-pill">Next</a>
+                                <a href="#order-details" class="btn btn-sm btn-outline-warning rounded-pill">Previous</a>
+                                <a href="#payment-data" class="btn btn-sm btn-warning rounded-pill">Next</a>
                             </div>   
                         </div>
                     </div>
                 </div>
                 <div class="col-12">                    
-                    <div class="card shadow mb-3 bg-white" id="payment-data">
-                        <div class="card-header">
-                            <h6 class="text-secondary mb-0 d-inline-block">
+                    <div class="card shadow mb-3 bg-white border-warning" id="payment-data">
+                        <div class="card-header bg-warning">
+                            <h6 class="text-dark mb-0 d-inline-block">
                                 Payment data
                             </h6>
                         </div>
                         <div class="card-body collapse show row">
                             <div class="col-12 col-md-4 col-lg-4">
-                                <h6 class="mb-2 text-secondary border-bottom pb-2">
+                                <h6 class="mb-2 text-dark border-bottom border-warning pb-2">
                                     Pay with:
                                 </h6> 
                                 <div class="input-group input-group-sm mb-2 ps-3 small">                                
@@ -148,7 +146,7 @@
                                 </div> 
                             </div>
                             <div class="col-12 col-md-8 col-lg-4">
-                                <h6 class="mb-2 text-secondary border-bottom pb-2">
+                                <h6 class="mb-2 text-dark border-bottom border-warning pb-2">
                                     Payment details:
                                 </h6> 
                                 <div class="input-group input-group-sm mb-2">
@@ -162,19 +160,19 @@
                             </div>  
                             <div class="col-12 col-lg-4">
                                 <div class="mx-2 text-end pt-3">
-                                    <a href="#personal-data" class="btn btn-sm btn-outline-secondary rounded-pill d-inline-block d-md-none">Previous</a>
-                                    <button href="#" class="btn btn-sm btn-secondary rounded-pill">Continue</button>
+                                    <a href="#personal-data" class="btn btn-sm btn-outline-warning rounded-pill d-inline-block d-md-none">Previous</a>
+                                    <button href="#" class="btn btn-sm btn-warning rounded-pill">Continue</button>
                                 </div>   
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>        
-        <footer class="container-fluid">
+        </section>     
+        <footer class="container-fluid d-flex align-items-center py-2 bg-warning border-top border-dark">
             <div class="row w-100 mx-0 text-center">
                 <div class="col-12 small">
-                    <p class="small text-dark">
+                    <p class="small text-dark mb-0">
                         Copyright &copy; 2022. All rights reserved. 
                         <a href="privacy.html" class="text-decoration-none text-dark">
                             Privacy policy
