--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="main-nav">
-                    <ul class="navbar-nav ms-auto text-end text-uppercase">
+                    <ul class="navbar-nav ms-auto text-end text-uppercase fw-bold text-shadow">
                         <li class="nav-item">
-                            <a href="index.html" class="nav-link">Home</a>
+                            <a href="index.html" class="nav-link text-warning">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="about.html" class="nav-link">About</a>
+                            <a href="about.html" class="nav-link text-warning">About</a>
                         </li>
                         <li class="nav-item">
-                            <a href="menu.html" class="nav-link">Menu</a>
+                            <a href="menu.html" class="nav-link text-warning">Menu</a>
                         </li>
                         <li class="nav-item">
-                            <a href="contact.html" class="nav-link">Contact</a>
+                            <a href="contact.html" class="nav-link text-warning">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a href="basket.html" class="nav-link">
+                            <a href="basket.html" class="nav-link text-warning">
                                 <span class="fa fa-shopping-cart"></span>
                             </a>
                         </li>
@@ -44,27 +44,27 @@
         </header>
         <section class="index-s1 min-vh-100 container-fluid d-flex align-items-center py-5">
             <div class="row w-100 mx-0">
-                <div class="col-12 col-md-7 minh-50vh"></div>
-                <div class="col-10 col-md-5 mx-auto d-flex align-items-center">
-                    <div>
+                <div class="col-12 col-lg-7 minh-50vh"></div>
+                <div class="col-10 col-lg-5 mx-auto d-flex align-items-center">
+                    <div class="text-center text-lg-start">
                         <img class="navbar-logo" src="img/navbar_logo.png" alt="logo"/>
-                        <h1 class="display-3">Lorem ipsum</h1>
-                        <p class="">
+                        <h1 class="display-3 text-warning text-shadow">Lorem ipsum</h1>
+                        <p class="text-muted">
                             Fusce suscipit, neque vel tincidunt sollicitudin, libero magna laoreet massa, 
                             eu pretium leo eros at mauris. Phasellus a lacus ipsum. Maecenas dapibus nisi 
                             ac fringilla pretium.
                         </p>
-                        <div class="w-100 text-start mt-2">
-                            <a href="menu.html" class="btn btn-secondary rounded-pill">See more</a>
+                        <div class="w-100 text-center text-lg-start mt-2">
+                            <a href="menu.html" class="btn btn-warning rounded-pill">See more</a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>  
-        <footer class="container-fluid">
+        <footer class="container-fluid d-flex align-items-center py-2 bg-warning border-top border-dark">
             <div class="row w-100 mx-0 text-center">
                 <div class="col-12 small">
-                    <p class="small text-dark">
+                    <p class="small text-dark mb-0">
                         Copyright &copy; 2022. All rights reserved. 
                         <a href="privacy.html" class="text-decoration-none text-dark">
                             Privacy policy
