--- a/menu.html
+++ b/menu.html
@@ -20,21 +20,21 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="main-nav">
-                    <ul class="navbar-nav ms-auto text-end text-uppercase">
+                    <ul class="navbar-nav ms-auto text-end text-uppercase fw-bold text-shadow">
                         <li class="nav-item">
-                            <a href="index.html" class="nav-link">Home</a>
+                            <a href="index.html" class="nav-link text-warning">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="about.html" class="nav-link">About</a>
+                            <a href="about.html" class="nav-link text-warning">About</a>
                         </li>
                         <li class="nav-item">
-                            <a href="menu.html" class="nav-link">Menu</a>
+                            <a href="menu.html" class="nav-link text-warning">Menu</a>
                         </li>
                         <li class="nav-item">
-                            <a href="contact.html" class="nav-link">Contact</a>
+                            <a href="contact.html" class="nav-link text-warning">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a href="basket.html" class="nav-link">
+                            <a href="basket.html" class="nav-link text-warning">
                                 <span class="fa fa-shopping-cart"></span>
                             </a>
                         </li>
@@ -42,14 +42,14 @@
                 </div>
             </nav>
         </header>
-        <section class="menu-s1 minh-25vh">
+        <section class="menu-s1 minh-25vh border-bottom border-dark">
         </section>
         <section class="menu-s2 minh-75vh container-fluid d-flex align-items-start py-5">
             <div class="row w-100 mx-0 mt-5">
                 <div class="col-12 col-md-4 col-lg-3">
-                    <div class="card shadow mb-3 bg-white">
-                        <div class="card-header bg-light">
-                            <h6 class="text-secondary mb-0 d-inline-block">
+                    <div class="card shadow mb-3 bg-white border-warning">
+                        <div class="card-header bg-warning">
+                            <h6 class="text-dark mb-0 d-inline-block">
                                 Search product
                             </h6>
                             <button class="btn btn-sm float-end rotate-obj" data-bs-toggle="collapse" data-bs-target="#filters">
@@ -69,14 +69,14 @@
                                     <option></option>
                                 </select>
                             </div>
-                            <div class="mx-2 text-end border-top border-secondary pt-2">
-                                <button class="btn btn-sm btn-secondary rounded-pill">Search</button>
+                            <div class="text-end border-top border-warning pt-2">
+                                <button class="btn btn-sm btn-warning rounded-pill">Search</button>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-8 col-lg-9">
-                    <div class="card mb-3 shadow bg-white">
+                    <div class="card mb-3 shadow bg-white border-warning">
                         <div class="row m-0">
                             <div class="col-lg-4 d-none d-lg-block px-0 bg-secondary">
                                 <img class="h-100 w-100" src="" alt=""/>
@@ -84,14 +84,14 @@
                             <div class="col-12 col-lg-8 px-0">
                                 <table class="table table-borderless mb-0">
                                     <thead>
-                                        <tr class="border-bottom text-secondary text-center">
+                                        <tr class="border-bottom text-dark bg-warning text-center">
                                             <th>Name</th>
                                             <th>Description</th>
                                             <th>Price</th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr class="text-center text-secondary small">
+                                        <tr class="text-center text-dark small">
                                             <td>XXX</td>
                                             <td>DDDDDDDDDD</td>
                                             <td>$ 0.00</td>
@@ -104,13 +104,13 @@
 
                 </div>
             </div>
-        </section>        
-        <footer class="container-fluid">
+        </section>   
+        <footer class="container-fluid d-flex align-items-center py-2 bg-warning border-top border-dark">
             <div class="row w-100 mx-0 text-center">
                 <div class="col-12 small">
-                    <p class="small text-secondary">
+                    <p class="small text-dark mb-0">
                         Copyright &copy; 2022. All rights reserved. 
-                        <a href="privacy.html" class="text-decoration-none text-secondary">
+                        <a href="privacy.html" class="text-decoration-none text-dark">
                             Privacy policy
                         </a>
                     </p>
